kube.yml
kind: Namespace
apiVersion: v1
metadata:
  name: mpasa
  labels:
    name: mpasa

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mpasa
  name: mpasa
spec:
  selector:
    matchLabels:
      app: mpasa
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mpasa
    spec:
      imagePullSecrets:
        - name: dockerpull-ghcr
      containers:
        - name: mpasa
          image: ghcr.io/mpasa/mpasa:latest
          imagePullPolicy: IfNotPresent
          args: []
          ports:
            - name: http
              containerPort: 8000
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mpasa
  name: mpasa
  namespace: mpasa
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  selector:
    app: mpasa

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: mpasa
  name: mpasa
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
    - hosts:
        - mpasa.me
        - www.mpasa.me
      secretName: mpasa-tls
  rules:
    - host: "mpasa.me"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mpasa
                port:
                  name: http
